Consider valid words as digits

--- a/2023/tests/CMakeLists.txt
+++ b/2023/tests/CMakeLists.txt
@@ -10,7 +10,7 @@ FetchContent_MakeAvailable(googletest)
 
 add_library(GTest::GTest INTERFACE IMPORTED)
 
-target_link_libraries(GTest::GTest INTERFACE gtest_main)
+target_link_libraries(GTest::GTest INTERFACE gtest_main gmock_main)
 
 include(CMakeSources.txt)
 
