--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(AOC src/main.cpp)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 add_subdirectory(src)
 add_subdirectory(tests)
 
