--- a/2023/CMakeLists.txt
+++ b/2023/CMakeLists.txt
@@ -5,9 +5,10 @@ project(AOC VERSION 1.0)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(AOC src/main.cpp)
-
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_BUILD_TYPE Debug)
+
+add_executable(AOC src/main.cpp)
 
 add_subdirectory(src)
 add_subdirectory(tests)
